[project]
name = "my-bruin-learning-repo"
version = "0.1.0"
description = "Bruin learning DE project with BigQuery, AWS, and DuckDB"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bruin>=0.1.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "google-cloud-bigquery",
    "boto3",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
